--- a/PDK/Ring_ressonator_PDK.ipynb
+++ b/PDK/Ring_ressonator_PDK.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FSR = [1*nm, 10*nm, 20*nm]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,11 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Lc1_values = np.linspace(35*um, 150*um, 10000)\n",
+    "Lc1_values = np.linspace(35*um, 250*um, 1000000)\n",
     "Lc2_values = np.zeros(len(Lc1_values))\n",
     "\n",
     "FSR_matrix = np.zeros(len(Lc1_values))"
@@ -89,29 +80,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "M = 7\n",
-    "N = 6\n",
+    "m1 = 6\n",
+    "m2 = 7\n",
     "\n",
     "for i, Lc1 in enumerate(Lc1_values):\n",
     "    Lr1 = calcular_Lr(Lc1)\n",
-    "    Lr2 = M/N * Lr1\n",
+    "    Lr2 = m2/m1 * Lr1\n",
     "\n",
     "    Lc2_values[i] = calcular_Lc(Lr2)\n",
     "\n",
     "    FSR1 = calcular_fsr(Lr1)\n",
     "    FSR2 = calcular_fsr(Lr2)\n",
     "\n",
-    "    FSR_total = abs(M - N) * (FSR1 * FSR2) / abs(FSR1 - FSR2)\n",
-    "    FSR_matrix[i] = FSR_total"
+    "    FSR_matrix[i] = abs(m2 - m1) * (FSR1 * FSR2) / abs(FSR1 - FSR2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,24 +112,26 @@
       "Comprimento aproximado do anel = 555.37μm\n",
       "Comprimento de acoplamento aproximado = 244.48μm\n",
       "\n",
-      "O erro entre o FSR calculado e o esperado é de: 0.0001%\n",
+      "O erro entre o FSR calculado e o esperado é de: 0.0000%\n",
       "Para FSR = 10.00nm:\n",
       "Comprimento aproximado do anel 1 = 164.82μm\n",
       "Comprimento aproximado do anel 2 = 353.76μm\n",
       "Comprimento de acoplamento 1 aproximado = 49.20μm\n",
       "Comprimento de acoplamento 2 aproximado = 143.67μm\n",
       "\n",
-      "O erro entre o FSR calculado e o esperado é de: 0.0038%\n",
+      "O erro entre o FSR calculado e o esperado é de: 0.0001%\n",
       "Para FSR = 20.00nm:\n",
-      "Comprimento aproximado do anel 1 = 81.52μm\n",
-      "Comprimento aproximado do anel 2 = 159.39μm\n",
+      "Comprimento aproximado do anel 1 = 81.51μm\n",
+      "Comprimento aproximado do anel 2 = 159.38μm\n",
       "Comprimento de acoplamento 1 aproximado = 7.55μm\n",
-      "Comprimento de acoplamento 2 aproximado = 46.49μm\n",
+      "Comprimento de acoplamento 2 aproximado = 46.48μm\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "FSR = [1*nm, 10*nm, 20*nm]\n",
+    "\n",
     "Lc1 = np.zeros(len(FSR))\n",
     "Lc2 = np.zeros(len(FSR))\n",
     "\n",
@@ -152,22 +144,29 @@
     "    Lr = calcular_Lr(Lc1[i])\n",
     "\n",
     "    for j in range (len(FSR)):\n",
-    "        if Lc1[i] < 0 or Lc2[i] < 0:            \n",
+    "        if Lc1[i] < 0 or Lc2[i] < 0:           \n",
     "            idx_min = np.argmin(np.abs(FSR_matrix - FSR[i]))\n",
     "            Lc1[i] = Lc1_values[idx_min]/2 - Lc_pdk\n",
     "            Lr1 = calcular_Lr(Lc1[i])\n",
+    "            FSR1 = calcular_fsr(Lr1)\n",
     "            Lc2[i] = Lc2_values[idx_min]/2 - Lc_pdk\n",
     "            Lr2 = calcular_Lr(Lc2[i])\n",
+    "            FSR2 = calcular_fsr(Lr2)\n",
     "\n",
     "            erro = np.abs(FSR[i] - FSR_matrix[idx_min])/FSR[i]\n",
     "\n",
     "            if Lc1[i] >= 0 and Lc2[i] >= 0:\n",
     "                print(f'O erro entre o FSR calculado e o esperado é de: {erro*100:.4f}%')\n",
-    "                print(f'Para FSR = {FSR[i]/nm:.2f}nm:\\nComprimento aproximado do anel 1 = {Lr1/um:.2f}\\u03BCm\\nComprimento aproximado do anel 2 = {Lr2/um:.2f}\\u03BCm\\nComprimento de acoplamento 1 aproximado = {Lc1[i]/um:.2f}\\u03BCm\\nComprimento de acoplamento 2 aproximado = {Lc2[i]/um:.2f}\\u03BCm\\n')\n",
+    "                print(f'Para FSR = {FSR[i]/nm:.2f}nm:')\n",
+    "                print(f'Comprimento aproximado do anel 1 = {Lr1/um:.2f}\\u03BCm')\n",
+    "                print(f'Comprimento aproximado do anel 2 = {Lr2/um:.2f}\\u03BCm')\n",
+    "                print(f'Comprimento de acoplamento 1 aproximado = {Lc1[i]/um:.2f}\\u03BCm\\nComprimento de acoplamento 2 aproximado = {Lc2[i]/um:.2f}\\u03BCm\\n')\n",
     "                break\n",
     "\n",
     "        else:\n",
-    "            print(f'Para FSR = {FSR[i]/nm:.2f}nm:\\nComprimento aproximado do anel = {Lr/um:.2f}\\u03BCm\\nComprimento de acoplamento aproximado = {Lc1[i]/um:.2f}\\u03BCm\\n')\n",
+    "            print(f'Para FSR = {FSR[i]/nm:.2f}nm:')\n",
+    "            print(f'Comprimento aproximado do anel = {Lr/um:.2f}\\u03BCm')\n",
+    "            print(f'Comprimento de acoplamento aproximado = {Lc1[i]/um:.2f}\\u03BCm\\n')\n",
     "            break\n",
     "\n",
     "Lc = np.array([Lc1, Lc2])"
@@ -963,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
