--- a/Ideal/Ring_ressonator_ideal.ipynb
+++ b/Ideal/Ring_ressonator_ideal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -66,9 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\Lumerical\\v221\\api\\python\\lumapi.py:796: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  message = re.sub('^(Error:)\\s(prompt line)\\s[0-9]+:', '', str(rvals[2])).strip()\n"
+     ]
+    }
+   ],
    "source": [
     "lumapiFile = \"C:\\\\Program Files\\\\Lumerical\\\\v221\\\\api\\\\python\\\\lumapi.py\"\n",
     "spec = importlib.util.spec_from_file_location(\"lumapi\", lumapiFile)\n",
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +194,7 @@
        "1.0"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
